fix bugs on mobile

--- a/src/styles/critical.css
+++ b/src/styles/critical.css
@@ -35,7 +35,7 @@
 
 html {
   scroll-behavior: smooth;
-  background: rgb(0, 18, 78);
+  background: rgb(0, 162, 115);
   min-height: 100%;
 }
 
